--- a/index.html
+++ b/index.html
@@ -254,8 +254,10 @@
                     <div class="act-left">
                         <h3 class="act-title">- 服務學習 × 文山關愛之家</h3>
                         <p class="act-text">
-                            因為服務學習，我們接觸到文山關愛之家，哄睡、餵奶、陪玩一個都沒有少，到後面其實很心疼這些小孩子，因為從小缺乏足夠的關愛，每個小孩見到大人都會吵著要抱抱，透過這次服務學習，也讓我有很深的體悟。
-                        </p>
+                            因為服務學習，我們接觸到了文山關愛之家。那段時間每天的工作都很充實，哄睡、餵奶、陪玩，哪一項都沒有少。原本只是把它當成一般的服務學習時數，但真正踏進去、開始和小朋友相處之後，心情其實完全不一樣。
+                            越到後面越覺得心疼，因為這些孩子從小就缺乏足夠的關愛，只要看到大人靠近，就會立刻湊過來、伸手要抱抱，有些甚至會緊緊抱著你不放。那個當下真的會很捨不得，會突然明白「陪伴」對他們來說不是理所當然，而是他們很努力抓住的溫暖。
+                            每天的相處都讓我印象很深刻，像是有些孩子雖然很皮，但其實只是希望有人注意他；也有些孩子安靜乖巧得讓人心疼，因為小小年紀卻像懂得太多。透過這次服務學習，我不只是完成了一個任務，而是重新去思考「被需要」跟「給予」的意義。
+                         </p>
                     </div>
                     <div class="act-right">
                         <img src="photo/6F9FED3F-4ACD-46E5-A313-E9D81B5A69E6.JPEG" class="pic-mid">
@@ -283,8 +285,7 @@
                     <div class="act-left">
                         <h3 class="act-title">- 臺灣北部大專院校自治營隊</h3>
                         <p class="act-text">
-                            今年暑假，因為多了一個新的身份：活動部部長，我去參與了北學連營隊。三天營隊學習到模擬議會、學生自治、解決辦活動的突發狀況etc.這些都將成為我未來一年在學生會的養分。
-                        </p>
+                            今年暑假，因為多了一個新的身份──活動部部長，我特地去參加了北學連的營隊。那三天的課程安排得非常緊湊，內容也比我想像中的還要多元，不只是教我們怎麼辦活動而已，而是從「學生自治」到「模擬議會」都有涵蓋。模擬議會的課程裡，我第一次真正感受到「討論」和「協調」的重要性。大家會針對同一個議題提出不同的意見，有時候甚至會吵成一團，但最後還是要想辦法找到共識。雖然過程有點混亂，可是也讓我看到每個人在負責一件事時，都希望結果可以更好。三天下來，我覺得自己不只是「上了一個營隊」，而是提前為接下來一整年的學生會工作做好準備。這些經驗都會成為我未來在活動部的養分，也讓我更有信心面對接下來的挑戰。 </p>
                     </div>
                     <div class="act-right">
                         <img src="photo/1D99E7D0-67EC-45B2-97B7-EDF1B4E59FF7.JPEG" class="pic-rect-sm">
@@ -307,7 +308,9 @@
             </div>
 
         </section>
-
+        <footer>
+            <p>© 2025 林亭羽 — 個人履歷表 | 中原大學資訊管理學系</p>
+          </footer>
     </article>
 
 </body>
