--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
                     <div class="exp-left">
                         <h3 class="exp-title">- 擔任嘉義縣兒少代表</h3>
                         <p class="exp-text">
-                            高一時，偶然在社群媒體上看到學姊轉發相關資訊，當時相當關心「城鄉差距」的議題，
-                            雖然嘉義縣不是說特別偏鄉，不過比起嘉義市的繁華，兩者差距還是存在的，
-                            因此我想透過「加入兒少代表」去更深入探討相關議題。
+                            高一那年，我偶然在社群媒體上看到學姊轉發有關「兒少代表」的資訊。當時我正好對「城鄉差距」這個議題特別有感，因為雖然嘉義縣不能算是非常偏鄉，但跟嘉義市相比，資源上的落差仍然存在。那種「明明離得很近，卻過得很不一樣」的感覺，讓我開始想更深入了解這背後的原因。
+                            所以我決定報名參加兒少代表，希望透過這個身份，能真正接觸政策討論與公共議題。加入後，我才發現這並不是一個只要「參與」就結束的活動，而是要花時間蒐集資料、傾聽不同孩子的聲音，並學會如何把這些意見整理成具體的建議。
                         </p>
                     </div>
                     <div class="exp-right two">
@@ -186,9 +185,7 @@
                     <div class="exp-left">
                         <h3 class="exp-title">- 外語相關證書</h3>
                         <p class="exp-text">
-                            英語是我較為擅長的科目，課餘時間我花比較多的心力在考取外語檢定上，
-                            第一次考多益取得了655分，第二次便進步了將近100分，
-                            未來也希望能運用英語能力拓展視野。
+                            英語一直是我比較擅長的科目，也是在課業之外我花最多時間投入的領域。平常除了上課，我也會利用課餘時間練習聽力、看英文影片或閱讀文章，讓自己在語感上更自然。第一次考多益時拿到了 655 分，雖然成績不算特別高，但對我來說是一個很重要的起點。之後我針對弱項加強練習，第二次考試就進步了將近 100 分。這段過程讓我學到「穩定努力比短期爆發更重要」，也更確信自己有能力持續進步。
                         </p>
                     </div>
                     <div class="exp-right one">
@@ -202,8 +199,7 @@
                     <div class="exp-left">
                         <h3 class="exp-title">- 高中英文演講比賽</h3>
                         <p class="exp-text">
-                            不會怯場、自信是我的優勢，高中時曾擔任三年在校司儀，
-                            因為對英文的熱愛，連續兩年都有去報名英語演講比賽，都獲得了第四名的佳績。
+                            不會怯場、自信一直是我的優勢。高中三年，我都擔任校內各式活動的司儀，從開學典禮、運動會到畢業典禮。這份經驗讓我在舞台上越來越能掌握節奏，也學會如何用語氣和表情帶動現場氣氛。除了主持，我對英文也一直充滿熱情。高中時連續兩年報名英文演講比賽，這些經歷不僅讓我在面對人群時更自在，也培養了臨場反應和溝通能力，成為我後來在學生會辦活動時的重要基礎。
                         </p>
                     </div>
                     <div class="exp-right two">
@@ -254,9 +250,9 @@
                     <div class="act-left">
                         <h3 class="act-title">- 服務學習 × 文山關愛之家</h3>
                         <p class="act-text">
-                            因為服務學習，我們接觸到了文山關愛之家。那段時間每天的工作都很充實，哄睡、餵奶、陪玩，哪一項都沒有少。原本只是把它當成一般的服務學習時數，但真正踏進去、開始和小朋友相處之後，心情其實完全不一樣。
-                            越到後面越覺得心疼，因為這些孩子從小就缺乏足夠的關愛，只要看到大人靠近，就會立刻湊過來、伸手要抱抱，有些甚至會緊緊抱著你不放。那個當下真的會很捨不得，會突然明白「陪伴」對他們來說不是理所當然，而是他們很努力抓住的溫暖。
-                            每天的相處都讓我印象很深刻，像是有些孩子雖然很皮，但其實只是希望有人注意他；也有些孩子安靜乖巧得讓人心疼，因為小小年紀卻像懂得太多。透過這次服務學習，我不只是完成了一個任務，而是重新去思考「被需要」跟「給予」的意義。
+                            因為服務學習，我們接觸到了文山關愛之家。那段時間每天的工作都很充實，哄睡、餵奶、陪玩，哪一項都沒有少。
+                            越到後面越覺得心疼，因為這些孩子從小就缺乏足夠的關愛，只要看到大人靠近，就會立刻湊過來、伸手要抱抱，有些甚至會緊緊抱著你不放。那個當下真的會很捨不得，會突然明白「陪伴」對他們來說不是理所當然。
+                            每個相處的瞬間都讓我印象很深刻，像是有些孩子雖然很皮，但其實只是希望有人注意他；也有些孩子安靜乖巧得讓人心疼，因為小小年紀卻像懂得太多。透過這次服務學習，我不只是完成了一個任務，而是重新去思考「被需要」跟「給予」的意義。
                          </p>
                     </div>
                     <div class="act-right">
@@ -271,7 +267,9 @@
                     <div class="act-left">
                         <h3 class="act-title">- 僑務探索營</h3>
                         <p class="act-text">
-                            三天的營隊，我們在共同學習、互相幫助中建立起深厚的友誼，過程中認識的朋友亦成為我人生中一個珍貴的財富。三天下來，帶給我的不僅僅是知識，更多的是成熟並且心態上的轉變，也使我更明白未來的我應該要往哪個方向及目標前行。                        </p>
+                            三天的營隊，我們在共同學習、互相幫助中建立起深厚的友誼，過程中認識的朋友亦成為我人生中一個珍貴的財富。
+                            三天下來，帶給我的不僅僅是知識，更多的是成熟並且心態上的轉變，也使我更明白未來的我應該要往哪個方向及目標前行。
+                        </p>
                     </div>
                     <div class="act-right">
                         <img src="photo/7463BD74-50F6-462E-A0E4-84C2F5D31202.JPEG" class="pic-cert">
@@ -285,7 +283,10 @@
                     <div class="act-left">
                         <h3 class="act-title">- 臺灣北部大專院校自治營隊</h3>
                         <p class="act-text">
-                            今年暑假，因為多了一個新的身份──活動部部長，我特地去參加了北學連的營隊。那三天的課程安排得非常緊湊，內容也比我想像中的還要多元，不只是教我們怎麼辦活動而已，而是從「學生自治」到「模擬議會」都有涵蓋。模擬議會的課程裡，我第一次真正感受到「討論」和「協調」的重要性。大家會針對同一個議題提出不同的意見，有時候甚至會吵成一團，但最後還是要想辦法找到共識。雖然過程有點混亂，可是也讓我看到每個人在負責一件事時，都希望結果可以更好。三天下來，我覺得自己不只是「上了一個營隊」，而是提前為接下來一整年的學生會工作做好準備。這些經驗都會成為我未來在活動部的養分，也讓我更有信心面對接下來的挑戰。 </p>
+                            今年暑假，因為多了一個新的身份──活動部部長，我特地去參加了北學連的營隊。
+                            那三天的課程安排得非常緊湊，內容也比我想像中的還要多元，不只是教我們怎麼辦活動而已，而是從「學生自治」到「模擬議會」都有涵蓋。
+                            模擬議會的課程裡，我第一次真正感受到「討論」和「協調」的重要性。雖然過程有點混亂，可是也讓我看到每個人在負責一件事時，都希望結果可以更好。三天下來，我覺得自己不只是「上了一個營隊」，而是提前為接下來一整年的學生會工作做好準備。這些經驗都會成為我未來在活動部的養分，也讓我更有信心面對接下來的挑戰。 
+                        </p>
                     </div>
                     <div class="act-right">
                         <img src="photo/1D99E7D0-67EC-45B2-97B7-EDF1B4E59FF7.JPEG" class="pic-rect-sm">
